[tool.poetry]
name = "reflexion-agent"
version = "0.1.0"
description = ""
authors = ["Sotades <anthonyjbateman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
black = "^24.10.0"
isort = "^5.13.2"
langchain = "^0.3.9"
langchain-openai = "^0.2.11"
langgraph = "^0.2.56"
langchain-community = "^0.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
